fix z-index of export dropdown in search header

--- a/css/includes/pages/_search.scss
+++ b/css/includes/pages/_search.scss
@@ -97,7 +97,7 @@
                position: sticky;
                top: -1px;
                background-color: inherit;
-               z-index: $zindex-sticky;
+               z-index: #{$zindex-sticky + 1};
             }
          }
 
